--- a/maps.html
+++ b/maps.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -55,14 +56,14 @@
                         </a>
                     </li>
 
-                    <!-- Link Profil Kecamatan -->
+                    <!-- Link Profil -->
                     <li class="nav-item">
                         <a class="nav-link text-white" href="profil.html">
                             <i class="fa-solid fa-city"></i> Profil
                         </a>
                     </li>
 
-                    <!-- Link to data.html -->
+                    <!-- Link Data -->
                     <li class="nav-item">
                         <a class="nav-link text-white" href="data.html">
                             <i class="fa-solid fa-database"></i> Data
