--- a/profil.html
+++ b/profil.html
@@ -62,7 +62,7 @@
                         </a>
                     </li>
 
-                    <!-- Link to data.html -->
+                    <!-- Link Data -->
                     <li class="nav-item">
                         <a class="nav-link text-white" href="data.html">
                             <i class="fa-solid fa-database"></i> Data
@@ -189,6 +189,7 @@
         </div>
     </div>
 
+    <!-- Isi Profil Kabupaten -->
     <div class="container my-5">
         <h1 class="text-center mb-4">Profil Kabupaten Karanganyar</h1>
         <div class="row align-items-center mb-4">
@@ -235,6 +236,7 @@
 
     <hr class="custom-divider">
 
+    <!-- Isi Profil Kecamatan -->
     <div class="container my-5">
         <h2 class="text-center mb-4">Profil Kecamatan</h2>
         <div class="accordion" id="accordionKecamatan">
