--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 
@@ -54,14 +55,14 @@
                         </a>
                     </li>
 
-                    <!-- Link Profil Kecamatan -->
+                    <!-- Link Profil -->
                     <li class="nav-item">
                         <a class="nav-link text-white" href="profil.html">
                             <i class="fa-solid fa-city"></i> Profil
                         </a>
                     </li>
 
-                    <!-- Link to data.html -->
+                    <!-- Link Data -->
                     <li class="nav-item">
                         <a class="nav-link text-white" href="data.html">
                             <i class="fa-solid fa-database"></i> Data
@@ -181,7 +182,7 @@
         </div>
     </div>
 
-    <!-- Landing Page -->
+    <!-- Halaman Utama -->
     <div id="landing-page" class="landing-page">
         <h1>Karanganyar Urban Map Portal</h1>
         <p>Navigate the map to explore insights of urban life in Karanganyar!</p>
